#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

SH-2011-04-11-0: Bugfix:      Note user of open source version that qrsh 
                              -suspend_remote is only available in the Univa 
                              version.
                 Issue:       GE-3402
                 Review:      DG

DG-2011-04-08-2: Bugfix:      added bash to login_shell list
                 Issue:       GE-3439
                 Review:      EB

SH-2011-04-08-0: Enhancem.:   removed -uge-ext and -add-univa-copyright from
                              aimk
                 Review:      JG

DG-2011-04-08-1: Bugfix:      added Univa copyright to sge_intro
                 Issue:       GE-3437

DG-2011-04-08-0: Bugfix:      qstat shows in binding field "unknown unknown"
                 Issue:       GE-3432
                 Review:      EB

EB-2011-04-08-0: Bugfix:      Auto installation rejects ADMIN_MAIL parameter
                              although it is correct
                 Issue:       GE-3423
                 Review:      DG

JG-2011-04-08-0: Bugfix:      fixed minor memory leaks / uninitialied variable
                 Review:      EB

SH-2011-04-07-0: Bugfix:      Suspending of remote process on qrsh -pty yes
                              <cmd> does not work on Solaris hosts
                 Issue:       GE-3434
                 Review:      HP

JG-2011-04-07-0: Cleanup:     remove no longer used package from
                              3rdparty/3rd_party_licscopyrights file
                 Issue:       GE-3416
                 Review:      DG
