@@ -8,6 +8,12 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+DG-2011-04-12-0: Bugfix:      when an immediate parallel job is rejected through
+                              missing resources the remaining job orders for the
+                              scheduling run are refused
+                 Issue:       GE-3443
+                 Review:      JG
+
 SH-2011-04-11-0: Bugfix:      Note user of open source version that qrsh 
                               -suspend_remote is only available in the Univa 
                               version.
